# ai-groundwork

./: pyproject.toml
openai-basic/: assistant.py  utils.py
prompt_templates/: arit.txt
